# ThriveMate-AI-Powered-Career-Assistant-

./: .gitignore  README.md  app.py  config_template.py  models.py  pyproject.toml  requirements.txt
attached_assets/: Pasted--I-need-a-full-stack-web-application-named-ThriveMate-AI-Career-Opportunity-Assistant-foc-1746632310976.txt
instance/: app.db  thrive_mate.db
services/: career_chat.py  job_recommender.py  register_routes.py  resume_analyzer.py
static/css/: styles.css
static/js/: career_chat.js  firebase_config.js  job_recommender.js  main.js  resume_analyzer.js
templates/: career_chat.html  index.html  job_recommender.html  layout.html  resume_analyzer.html
utils/: __init__.py  firebase_db.py  firebase_utils.py  text_extraction.py
